# mi-proyecto

./: .gitignore  main.py  pyproject.toml  test_main.py
.github/workflows/: python-ci-cd.yml  python-ci.yml
estimador-cag/: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py  transcripcion_ejemplo.txt
estimador-cag/app/: config.py  main.py  observability.py  schemas.py  sessions.py
estimador-cag/app/context/: examples.py
estimador-cag/app/prompts/: estimation.py  loader.py
estimador-cag/app/prompts/estimation/v1/: examples.j2  system.j2  user.j2
estimador-cag/app/prompts/session_estimation/v1/: system.j2  user.j2
estimador-cag/app/routers/: estimations.py  sessions.py
estimador-cag/app/schemas/: estimation.py
estimador-cag/app/services/: attachments.py  llm_service.py  llm_wrapper.py  metadata_extractor.py  session_service.py
estimador-cag/evals/: __init__.py  metrics.py
estimador-cag/evals/stress/: REPORT.md  __init__.py  metrics.py  report.py  results.csv  run.py  scenarios.py
estimador-cag/evals/stress/fixtures/: __init__.py  build_pdfs.py
estimador-cag/tests/: test_sessions.py  test_stress_metrics.py  test_stress_runner.py
estimador-cag/tests/prompts/: test_estimation_v1.py
