[project]
name = "estimador-cag"
version = "0.1.0"
description = "Servicio FastAPI que estima software a partir de transcripciones de reuniones usando arquitectura CAG (contexto estático inyectado en el prompt)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.38.0",
    "jinja2>=3.1.0",
    "pytest>=8.0.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
